--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-home-assistant",
-  "version": "0.2.1",
+  "name": "node-home-assistant-llat",
+  "version": "0.2.4",
   "main": "index.js",
   "scripts": {
     "dev:watch": "DEBUG=home-assistant* nodemon _scratchpad/scratchpad.js",
